<resources>
    <string name="app_name">Life Butler</string>
    <string name="title_user">首頁</string>
    <string name="title_data">數據</string>
    <string name="title_charts">圖表</string>
    <string name="title_info">資訊</string>
    <string name="acc_hint"><pre>帳號</pre></string>
    <string name="pw_hint">密碼</string>
    <string name="login">登入</string>
    <string name="forget">忘記密碼</string>
    <string name="rem">記住我</string>
    <string name="title_forgot">帳戶救援</string>
    <string name="send">送出</string>
    <string name="forgot_mail_hint">電子信箱</string>
    <string name='forgot_name_hint'>暱稱</string>
    <string name="forgot_acc_hint">帳號</string>
    <string name="profile_title">個人資料</string>
    <string name="group_title">群組</string>
    <string name="profile_name">暱稱</string>
    <string name="profile_acc">帳號</string>
    <string name="profile_id">編號</string>
    <string name="profile_sensor">感測器</string>
    <string name="profile_group">群組</string>
    <string name="no">No</string>
    <string name="btn_binding">綁定</string>
    <string name="btn_out">解除綁定</string>
    <string name="btn_create">創建</string>
    <string name="btn_quit">離開</string>
    <string name="btn_logout">登出</string>
    <string name="count">0</string>
    <string name="fan">通風扇</string>
    <string name="txt_db">分貝</string>
    <string name="txt_CO">一氧化碳</string>
    <string name="txt_CH4">甲烷</string>
    <string name="txt_smoke">煙霧</string>
    <string name="date">日期</string>
    <string name="next">下一步</string>
    <string name="back">上一步</string>
    <string name="skip">跳過</string>
    <string name="register">註冊</string>
    <string name="create">註冊</string>
    <string name="pw_hint_again">密碼確認</string>
    <string name="hint_sensor">尚未綁定任何設備</string>
    <string name="hint_group">尚未加入任何群組</string>
    <string name="bind">綁定</string>
    <string name="add">創建</string>
    <string name="join">加入</string>
    <string name="get"><u>繪製</u></string>
    <string name="be_before">前天</string>
    <string name="analyze">比較</string>
    <string name="before">昨天</string>
    <string name="hint_edit_name">請輸入欲修正之暱稱</string>
    <string name="editMail">電子信箱</string>
    <string name="hint_edit_mail">請輸入欲修正之電子信箱</string>
    <string name="hint_edit_old_mail">請輸入舊信箱</string>
    <string name="hint_edit_new_mail">請輸入新信箱</string>
    <string name="profile_tel">聯絡人</string>
    <string name="edit_tel">請輸入緊急聯絡人的電話號碼</string>
    <string name="hint_edit_tel">電話號碼</string>
    <string name="x">X</string>
    <string name="customer_dialog">客製化視窗</string>
    <string name="customer_dialog_value">這是您客製化的視窗!</string>
    <string name="know">我知道了</string>

</resources>
