<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#45a1ba"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txt_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/view_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginVertical="50sp"
        tools:ignore="UnusedAttribute,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20sp"
            android:background="@drawable/trans_white_rectangle"
            android:orientation="vertical"
            android:paddingTop="40sp"
            android:paddingBottom="40sp"
            android:paddingStart="20sp"
            android:paddingEnd="20sp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20sp"
                android:background="@drawable/ic_login"
                android:contentDescription="@null" />

            <AutoCompleteTextView
                android:id="@+id/auto_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:background="#ddd"
                android:drawablePadding="15sp"
                android:drawableStart="@drawable/ic_person"
                android:hint="@string/acc_hint"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingBottom="5sp"
                android:paddingStart="10sp"
                android:paddingTop="5sp"
                android:textColor="#000"
                android:textColorHint="#999"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <AutoCompleteTextView
                android:id="@+id/auto_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="#ddd"
                android:drawablePadding="15sp"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/pw_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingBottom="5sp"
                android:paddingStart="10sp"
                android:paddingTop="5sp"
                android:textColor="#000"
                android:textColorHint="#999"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox_rem"
                    android:textSize="14sp"
                    android:text="@string/rem"
                    android:layout_alignParentStart="true"
                    android:checked="true"/>

                <TextView
                    android:id="@+id/txt_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_centerVertical="true"
                    android:text="@string/forget"
                    android:textColor="#C50"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/shape_rectangle"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>