<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#45a1ba"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        tools:ignore="MissingPrefix">

    <TextView
        android:id="@+id/toolbar_title"
        android:textColor="#fff"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="@string/profile_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/group_name"
        android:layout_marginTop="20sp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/toolbar"
        android:textSize="26sp"
        android:textColor="#666"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:id="@+id/group_linear">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/group_txt"
            android:text="@string/hint_group"
            android:gravity="center_horizontal"
            android:textSize="26sp"
            android:textColor="#666"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/group_create"
                android:paddingStart="20sp"
                android:paddingEnd="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="10sp"
                android:background="@drawable/shape_rectangle"
                android:text="@string/add"
                android:textSize="20sp"
                android:textColor="#fff"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/group_join"
                android:paddingStart="30sp"
                android:paddingEnd="30sp"
                android:layout_marginTop="20sp"
                android:layout_marginStart="10sp"
                android:background="@drawable/shape_rectangle"
                android:text="@string/join"
                android:textSize="20sp"
                android:textColor="#fff"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/group_name"
            android:id="@+id/group_member_list"
            tools:ignore="NestedScrolling" />

</RelativeLayout>