<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SensorActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#45a1ba"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        tools:ignore="MissingPrefix">

        <TextView
            android:id="@+id/toolbar_title"
            android:textColor="#fff"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/profile_sensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sensor_name"
        android:layout_marginTop="10sp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/toolbar"
        android:textSize="30sp"
        android:textColor="#666"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sensor_info"
        android:layout_marginTop="10sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="15sp"
        android:layout_below="@+id/sensor_name"
        android:textSize="18sp"
        android:textColor="#666"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sensor_edt"
        android:textSize="26sp"
        android:textColor="#666"
        android:text="@string/hint_sensor"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        tools:ignore="LabelFor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sensor_btn"
        android:text="@string/bind"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sensor_edt"
        android:paddingStart="30sp"
        android:paddingEnd="30sp"
        android:layout_marginTop="20sp"
        android:background="@drawable/shape_rectangle"
        android:textSize="20sp"
        android:textColor="#fff"
        android:textStyle="bold"/>

</RelativeLayout>