<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:transitionGroup="false"
    android:nestedScrollingEnabled="false"
    tools:context="com.example.user.test_bottom_navigation.CustomerDialog"
    android:id="@+id/dialogBackground"
    android:gravity="center_vertical|center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="330dp"
        android:layout_height="270dp"
        android:background="#ffffffff"
        tools:ignore="UselessParent">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_margin="0dp"
            android:focusable="true"
            android:background="#45a1ba">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/text_title"
                android:text="@string/customer_dialog"
                android:minHeight="50dp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/text_content"
            android:text="@string/customer_dialog_value"
            android:textColor="@android:color/black"
            android:minHeight="100dp"
            android:padding="30dp"
            android:background="@android:color/white"
            android:gravity="center_vertical" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:weightSum="1">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:text="@string/know"
                android:id="@+id/btn_confirm"
                android:layout_gravity="center_horizontal"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>