<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#45a1ba"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/view_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        tools:ignore="UnusedAttribute,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/trans_white_rectangle"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20sp"
            android:orientation="vertical"
            android:paddingBottom="30sp"
            android:paddingEnd="20sp"
            android:paddingStart="20sp"
            android:paddingTop="30sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register_txt"
                android:text="@string/create"
                android:textColor="#45a1ba"
                android:textStyle="bold"
                android:textSize="40sp"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/edt_register_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="20sp"
                android:background="#ddd"
                android:drawablePadding="15sp"
                android:drawableStart="@drawable/ic_person"
                android:hint="@string/forgot_acc_hint"
                android:inputType="text"
                android:paddingBottom="5sp"
                android:paddingStart="10sp"
                android:paddingTop="5sp"
                android:textColor="#000"
                android:textColorHint="#999"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/edt_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:background="#ddd"
                android:drawablePadding="15sp"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/pw_hint"
                android:inputType="textPassword"
                android:paddingBottom="5sp"
                android:paddingStart="10sp"
                android:paddingTop="5sp"
                android:textColor="#000"
                android:textColorHint="#999"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/edt_register_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:background="#ddd"
                android:drawablePadding="15sp"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/pw_hint_again"
                android:inputType="textPassword"
                android:paddingBottom="5sp"
                android:paddingStart="10sp"
                android:paddingTop="5sp"
                android:textColor="#000"
                android:textColorHint="#999"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/edt_register_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:background="#ddd"
                android:drawablePadding="15sp"
                android:drawableStart="@drawable/ic_name"
                android:hint="@string/forgot_name_hint"
                android:inputType="textPassword"
                android:paddingBottom="5sp"
                android:paddingStart="10sp"
                android:paddingTop="5sp"
                android:textColor="#000"
                android:textColorHint="#999"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />


            <EditText
                android:id="@+id/edt_register_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:background="#ddd"
                android:drawablePadding="15sp"
                android:drawableStart="@drawable/ic_mail"
                android:hint="@string/forgot_mail_hint"
                android:inputType="textEmailAddress"
                android:paddingBottom="5sp"
                android:paddingStart="10sp"
                android:paddingTop="5sp"
                android:textColor="#000"
                android:textColorHint="#999"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/btn_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/shape_rectangle"
                android:paddingEnd="30sp"
                android:paddingStart="30sp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>