<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditName">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#45a1ba"
        android:paddingBottom="5sp"
        android:paddingTop="5sp"
        tools:ignore="MissingPrefix">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile_name"
            android:textColor="#fff"
            android:textSize="28sp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/toolbar"
       android:layout_marginTop="10sp">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/edit_name"
           android:layout_centerHorizontal="true"
           android:text="@string/hint_edit_name"
           android:textColor="#000"
           android:layout_marginStart="10sp"
           android:textSize="24sp"/>
       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/input_edit_name"
           android:inputType="text"
           android:background="#ddd"
           android:paddingBottom="5sp"
           android:paddingStart="10sp"
           android:paddingTop="5sp"
           android:textColor="#000"
           android:textSize="24sp"
           android:layout_below="@+id/edit_name"
           android:layout_marginStart="15sp"
           android:layout_marginEnd="15sp"
           android:layout_marginTop="10sp"
           tools:ignore="LabelFor,RtlSymmetry" />

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/edit_name_btn"
           android:layout_below="@+id/input_edit_name"
           android:paddingStart="30sp"
           android:paddingEnd="30sp"
           android:layout_marginTop="20sp"
           android:layout_marginStart="10sp"
           android:layout_centerHorizontal="true"
           android:background="@drawable/shape_rectangle"
           android:text="@string/send"
           android:textSize="20sp"
           android:textColor="#fff"
           android:textStyle="bold"/>
   </RelativeLayout>

</RelativeLayout>