<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#45a1ba"
    tools:context=".ForgetPasswordActivity">

    <TextView
        android:id="@+id/txt_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"
        android:text="@string/title_forgot"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/view_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginVertical="50sp"
        tools:ignore="UnusedAttribute,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20sp"
            android:background="@drawable/trans_white_rectangle"
            android:orientation="vertical"
            android:paddingTop="40sp"
            android:paddingBottom="40sp"
            android:paddingStart="20sp"
            android:paddingEnd="20sp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20sp"
                android:background="@drawable/ic_forgot"
                android:contentDescription="@null" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_forget_nickname"
                android:layout_marginStart="10sp"
                android:background="#ddd"
                android:hint="@string/forgot_name_hint"
                android:paddingBottom="5sp"
                android:drawableStart="@drawable/ic_name"
                android:drawablePadding="15sp"
                android:paddingStart="10sp"
                android:paddingTop="5sp"
                android:textColor="#000"
                android:textColorHint="#999"
                android:textSize="20sp"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                tools:ignore="RtlSymmetry"
                android:inputType="text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_forget_acc"
                android:layout_marginStart="10sp"
                android:background="#ddd"
                android:hint="@string/forgot_acc_hint"
                android:paddingBottom="5sp"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="15sp"
                android:paddingStart="10sp"
                android:paddingTop="5sp"
                android:textColor="#000"
                android:textColorHint="#999"
                android:textSize="20sp"
                android:layout_marginBottom="10sp"
                tools:ignore="RtlSymmetry"
                android:inputType="text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_forget_mail"
                android:layout_marginStart="10sp"
                android:background="#ddd"
                android:hint="@string/forgot_mail_hint"
                android:paddingBottom="5sp"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="15sp"
                android:paddingStart="10sp"
                android:paddingTop="5sp"
                android:textColor="#000"
                android:textColorHint="#999"
                android:textSize="20sp"
                android:layout_marginBottom="10sp"
                tools:ignore="RtlSymmetry"
                android:inputType="textEmailAddress" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_send"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/shape_rectangle"
                android:layout_gravity="center_horizontal"
                android:paddingStart="30sp"
                android:paddingEnd="30sp"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>